[package]
name = "network_farming"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"          # Веб-фреймворк
actix-files = "0.6"       # Для обслуживания статических файлов
clap = { version = "4.0", features = ["derive"] } # CLI-аргументы
serde = { version = "1.0", features = ["derive"] } # Сериализация/десериализация JSON
sysinfo = "0.33"          # Для работы с сетевым трафиком
rusqlite = { version = "0.33.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] } # Асинхронное программирование
serde_json = "1.0"
